Completed the JS part of the project and also finished the project

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
       <div class="form">
         <label for="birthday">Enter your date of birth</label>
         <input type="date" name="birthday" id="birthday">
-        <button>Calculate Age</button>
-        <p id="result">Your age is 21 years old</p>
+        <button id="btn">Calculate Age</button>
+        <p id="result"></p>
       </div>
     </div>
+    <script src="./app.js"></script>
   </body>
 
 </html>
